# poc-celery

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yaml
conda/: base.yaml  dev.yaml
data/: collectors.txt
main/: __init__.py  celery_app.py  get_container_ip.py  tasks.py  tasks_async.py
main/scripts/: get_container_ip.py  start_celery_and_flower.sh
main/tests/: tests_tasks.py  tests_tasks_async.py  tests_tasks_collectors.py
main/tests/data/: collectors.txt
scripts/: setup.sh  start_celery_and_flower.sh  stop_celery_and_flower.sh
src/poc_celery/: __init__.py  celery_app.py  db.py  get_container_ip.py  tasks_async.py  tasks_collectors.py
src/poc_celery/config/: celeryconfig
src/poc_celery/poc1/: __init__.py  celery_app.py  tasks_async.py  tasks_collectors.py
src/poc_celery/poc2/: __init__.py  celery_app.py  tasks.py
tests/: conftest.py  test_tasks_async.py  test_tasks_collectors.py
tests/poc1/: test_tasks_async.py  test_tasks_collectors.py
tests/poc2/: test_tasks_collectors.py
